--- a/src/css/nav/_nav-container.scss
+++ b/src/css/nav/_nav-container.scss
@@ -20,7 +20,7 @@
 
 // Transition
 .nav-container {
-  --transition-delay: .3s;
+  --transition-delay: .2s;
 
   // Transitioned properties
   opacity: 0;
